blurry text when set to odd values (fixed)

--- a/style/style.css
+++ b/style/style.css
@@ -262,8 +262,8 @@ ul {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms var(--timing-function-cubic);
 
-  width: 528px;
-  height: 581px;
+  width: 530px;
+  height: 580px;
 
   background-color: var(--second-color-text);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
